--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2.1
+version: 2
 jobs:
   run_tests:
     working_directory: ~/react-app
@@ -25,3 +25,10 @@ jobs:
       - run:
           name: test
           command: npm test
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - test
+
