--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@
 version: 2
 jobs:
   run_tests:
-    working_directory: ~/react-app
     docker:
       - image: circleci/node:10.16.3
     steps:
@@ -27,8 +26,7 @@ jobs:
           command: npm test
 workflows:
   version: 2
-  build_and_test:
+  test:
     jobs:
-      - build
-      - test
+      - run_tests
 
