add product quickview modal

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,8 @@
     ],
     "rules": {
         "import/prefer-default-export": 0,
+        "jsx-a11y/no-noninteractive-element-interactions": 0,
+        "jsx-a11y/click-events-have-key-events": 0,
         "react/prop-types": 0,
         "react/no-array-index-key": 0,
         "no-console": 1,
